hard-gists/7428185/run.log
=== Docker Run Log for 7428185 ===
Started at: Mi 29. Okt 17:09:15 CET 2025

[2025-10-29 17:09:16] START: Running container for 7428185
[2025-10-29 17:09:16] SUCCESS: Container 8a91200c30b1f035d89d6fb537662ca276b636bd671da4463e98329b3c20670a started for 7428185
=== Container logs for 7428185 ===
  File "/snippet.py", line 71
    print 'Post Successfully posted. Its Id is: ',post.id
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7428185 ===
[2025-10-29 17:09:18] INFO: Container 8a91200c30b1f035d89d6fb537662ca276b636bd671da4463e98329b3c20670a has stopped
